# gnuplot

./: Makefile  ToDo  gnuplot.cabal
execute/pipe/Graphics/Gnuplot/: Execute.hs
execute/shell/Graphics/Gnuplot/: Execute.hs
execute/tmp/Graphics/Gnuplot/: Execute.hs
src/: Demo.hs
src/Graphics/GNUPlot/: Simple.hs  Time.hs  Utility.hs
src/Graphics/Gnuplot/: Advanced.hs  ColorSpecification.hs  Display.hs  File.hs  Frame.hs  Graph.hs  LineSpecification.hs  MultiPlot.hs  Plot.hs  Simple.hs  Terminal.hs  Time.hs  Utility.hs
src/Graphics/Gnuplot/Frame/: Option.hs  OptionSet.hs
src/Graphics/Gnuplot/Frame/OptionSet/: Histogram.hs  Style.hs
src/Graphics/Gnuplot/Graph/: ThreeDimensional.hs  TwoDimensional.hs
src/Graphics/Gnuplot/Plot/: ThreeDimensional.hs  TwoDimensional.hs
src/Graphics/Gnuplot/Private/: ColorSpecification.hs  Command.hs  Display.hs  File.hs  Frame.hs  FrameOption.hs  FrameOptionSet.hs  Graph.hs  Graph2D.hs  Graph2DType.hs  Graph3D.hs  Graph3DType.hs  GraphEmpty.hs  GraphType.hs  LineSpecification.hs  Plot.hs  Terminal.hs
src/Graphics/Gnuplot/Terminal/: Default.hs  PNG.hs  PostScript.hs  SVG.hs  WXT.hs  X11.hs
src/Graphics/Gnuplot/Value/: Atom.hs  ColumnSet.hs  Tuple.hs
