Name:             gnuplot
Version:          0.2
License:          GPL
License-File:     LICENSE
Author:           Henning Thielemann <haskell@henning-thielemann.de>
Maintainer:       Henning Thielemann <haskell@henning-thielemann.de>
Homepage:         http://www.haskell.org/haskellwiki/Gnuplot
Package-URL:      http://code.haskell.org/gnuplot/
Category:         Graphics, Math
Synopsis:         2D and 3D plots using gnuplot
Description:
   This is a wrapper to gnuplot
   which lets you create 2D and 3D plots.
   .
   In the past this was part of the htam package.
Tested-With:       GHC==6.8.2
Cabal-Version:     >=1.2
Build-Type:        Simple

Flag splitBase
  description: Choose the new smaller, split-up base package.

Flag buildTests
  description: Build test executables
  default:     False

Library
  If flag(splitBase)
    Build-Depends: base >= 2, process >= 1.0 && < 1.1, time >= 1.1 && < 1.2, old-locale >= 1.0 && < 1.1
  Else
    Build-Depends: base >= 1.0 && < 2

  GHC-Options:      -Wall
  Hs-Source-Dirs:   src
  Exposed-Modules:
    Graphics.Gnuplot.Simple
    Graphics.Gnuplot.Time
  Other-Modules:
    Graphics.Gnuplot.Utility
